--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.8.0",
